--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/logo_transparent.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Techne - Dashboard experts</title>
+    <title>Inventory Genius - Dashboard experts</title>
   </head>
   <body>
     <div id="root"></div>
